# LiveHost

./: .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h
Source/Core/: AppLogger.cpp  AppLogger.h
Source/Plugins/: PluginManager.cpp  PluginManager.h
Source/Scanner/: PluginScannerMain.cpp
Source/UI/: LevelMeter.cpp  LevelMeter.h
